--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,7 +21,7 @@
  
 
 .main {
-  width: 80%;
+  width: 85%;
   margin: auto;
   max-width: 1000px;
 }
@@ -37,13 +37,13 @@
 
 .content-left {
   font-size: 36px;
-  padding-right: 1.5rem;
+  padding-right: 3rem;
   min-width:  45%;
   max-width: 60%;
 }
 
 .content-left p {
-  padding-bottom: 2rem;
+  padding-bottom: 4rem; 
 }
 
 .content-right {
@@ -128,13 +128,21 @@
 
 }
 
+@media (max-width: 900px) {
+.content-left p{
+  font-size: 30px;
+  padding-bottom: 1rem;
+}
+}
+
 @media (max-width: 768px) {
   .store-front {
    width: 100%;
    height: 100%;
   }
-  .content-left {
-    font-size: 30px; 
+  
+  .content-left p{
+    font-size: 24px; 
   }
 
   .testimonial p {
@@ -226,8 +234,7 @@
     margin-top: 3rem; 
     min-height: 14rem;
   }
-  .testimonial p {
-    font-size: 18px;
+  .testimonial p { 
     width: 90%;
   }
  
@@ -256,9 +263,7 @@
     margin-bottom: 1.5rem;
   }
 
-  .contact-us div h1 {
-    font-size: 18px;
-  }
+ 
 
   .button {
     padding: 0rem; 
