--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -9,16 +9,18 @@
   width: 100%;
   color: white;
   padding: 1.5rem 4rem;
-  align-items: center; 
+  align-items: center;
   font-size: 24px;
   font-weight: bold;
 }
 
 .whatsapp-button {
-  background-color: #25D366; color: white; font-size: 16px;
+  background-color: #25D366;
+  color: white;
+  font-size: 16px;
   height: 50px;
 }
- 
+
 
 .main {
   width: 85%;
@@ -38,17 +40,14 @@
 .content-left {
   font-size: 36px;
   padding-right: 3rem;
-  min-width:  45%;
+  min-width: 45%;
   max-width: 60%;
 }
 
 .content-left p {
-  padding-bottom: 4rem; 
+  padding-bottom: 4rem;
 }
 
-.content-right {
-  /* margin-top: 4rem; */
-}
 
 
 
@@ -58,7 +57,8 @@
   display: flex;
   justify-content: space-between;
 }
-.feature { 
+
+.feature {
   margin-right: 1rem;
 }
 
@@ -79,6 +79,7 @@
   font-size: 22px;
   min-height: 17rem;
 }
+
 .testimonial p {
   width: 40%;
   text-align: center;
@@ -88,7 +89,7 @@
   margin-top: 7rem;
 }
 
-.contact-us > h1 {
+.contact-us>h1 {
   text-align: center;
   font-size: 48px;
   width: 100%;
@@ -98,6 +99,7 @@
 .contact-us div h1 {
   margin-bottom: 1rem;
 }
+
 .contact-us div p {
   margin-bottom: 0.5rem;
 }
@@ -108,6 +110,7 @@
 }
 
 .footer {
+  width: 85%;
   margin-top: 3rem;
   margin-bottom: 2rem;
   background-color: var(--dark-grey);
@@ -117,10 +120,21 @@
   padding: 2rem 1rem;
 }
 
+
 .footer-left {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.footer-right .footer-logo {
+  margin-top: 0.7rem;
 }
 
 .map {
@@ -129,63 +143,72 @@
 }
 
 @media (max-width: 900px) {
-.content-left p{
-  font-size: 30px;
-  padding-bottom: 1rem;
-}
+  .content-left p {
+    font-size: 30px;
+    padding-bottom: 1rem;
+  }
 }
 
 @media (max-width: 768px) {
   .store-front {
-   width: 100%;
-   height: 100%;
+    width: 100%;
+    height: 100%;
   }
-  
-  .content-left p{
-    font-size: 24px; 
+
+  .content-left p {
+    font-size: 24px;
   }
 
   .testimonial p {
-    width: 50%; 
+    width: 50%;
   }
 
-  .contact-us > h1 { 
-    font-size: 46px; 
+  .contact-us>h1 {
+    font-size: 46px;
   }
 
-  .features { 
+  .features {
     justify-content: center;
     flex-wrap: wrap;
   }
+
   .feature {
     margin-top: 1rem;
   }
 }
+
 @media (max-width: 530px) {
+
+  .button.whatsapp-button {
+    font-weight: 400;
+  }
 
   .business-landing-header {
     padding: 2rem 0;
-   flex-direction: column;
-   justify-content: stretch;
-   align-items: center;
-   position: relative;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    position: relative;
   }
+
   .business-landing-header-title {
-   margin-top: 0;
-   font-size: 32px;
+    margin-top: 0;
+    font-size: 32px;
   }
- .business-landing-header p{
-  width: 85%; 
-  text-align: center;
+
+  .business-landing-header p {
+    width: 85%;
+    text-align: center;
   }
-  .business-landing-header button{
+
+  .business-landing-header button {
     margin-top: 1rem;
-  width: 85%; 
-  text-align: center;
+    width: 85%;
+    text-align: center;
   }
 
   .main {
-    width: 85%;  
+    width: 85%;
   }
 
   .content {
@@ -196,12 +219,18 @@
     align-items: flex-start;
 
   }
-  .content-left   {
-  min-width: 100%;
-  max-width: none;
-  font-size: 24px;
 
+  .content-left {
+    min-width: 100%;
+    max-width: none;
+    padding-right: 0;
+    
   }
+  .content-left p{ 
+    font-size: 28px;
+    
+  }
+
   .content-left button {
     position: absolute;
     bottom: -5rem;
@@ -210,88 +239,124 @@
 
   }
 
+  
+.content-right {
+  margin-top: 1rem;
+}
+
 
   .features {
     margin-top: 3rem;
-    font-size: 18px; 
+    font-size: 20px;
     justify-content: flex-start;
   }
 
   .feature {
     margin-top: 2rem;
   }
+
   .feature-image {
-    width: 60px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .feature:last-child .feature-image {
+
     height: 60px;
   }
-  .feature:last-child .feature-image{
 
-    height: 70px;
-  }
-  
-  
   .testimonial {
-    margin-top: 3rem; 
+    margin-top: 3rem;
     min-height: 14rem;
   }
-  .testimonial p { 
+
+  .testimonial p {
     width: 90%;
   }
- 
-  .contact-us   { 
-   margin-top: 3rem;
-   flex-direction: column;
+
+  .contact-us {
+    margin-top: 4rem;
+    flex-direction: column;
   }
-  .contact-us > div  {  
-   flex-direction: column;
+
+  .contact-us>div {
+    flex-direction: column;
   }
+
   .contact-right {
     margin-top: 2rem;
   }
-  
-  .contact-left h1, .contact-right h1 {
+
+  .contact-left h1,
+  .contact-right h1 {
+    font-size: 24px !important;
+    font-weight: 500;
+  }
+
+  .contact-left p,
+  .contact-right p {
     font-size: 18px !important;
   }
-  
+
   .map {
     height: 350px;
   }
-  
-  .contact-us > h1 { 
+
+  .contact-us>h1 {
     text-align: left;
     font-size: 28px;
     margin-bottom: 1.5rem;
   }
 
- 
-
   .button {
-    padding: 0rem; 
+    padding: 0rem;
   }
 
-  .footer-logo {
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  width: 95%;
+  margin: 2rem auto 1rem auto;
+
+  }
+
+  .footer-left,
+  .footer-right {
+    align-items: center;
+  }
+
+  .footer-right {
+    margin-top: 1.5rem;
+  }
+
+  .footer-right img.footer-logo {
+    margin-top: 1rem;
+  }
+
+  .footer-left .footer-logo {
+    width: 180px;
+  }
+  .footer-right .footer-logo {
     width: 150px;
   }
-  
+
 
 }
 
 @media (max-width: 480px) {
- 
-  
-  
- 
- 
+
+
+
+
+
   .content-left p {
     padding-bottom: 1rem;
   }
- 
-.map {
-  height: 300px;
-}
-  
 
-  
-}
+  .map {
+    height: 300px;
+  }
 
- 
+
+
+}
