--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -25,7 +25,7 @@
 .main {
   width: 85%;
   margin: auto;
-  max-width: 1000px;
+  max-width: 980px;
 }
 
 .business-landing-header-title {
@@ -115,8 +115,8 @@
   background-color: var(--dark-grey);
   border-radius: 10px;
   color: white;
-  padding: 2rem 1rem;
-  max-width: 1000px;
+  padding:  3rem 1rem 2rem 1rem;
+  max-width: 980px;
 }
 
 
@@ -132,8 +132,8 @@
   align-items: end;
 }
 
-.footer-right .footer-logo {
-  margin-top: 0.7rem;
+ .footer-logo {
+  margin-top: 1rem;
 }
 
 .map {
